# absys

./: .bumpversion.cfg  .editorconfig  .gitignore  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  Vagrantfile  manage.py  pip-selfcheck.json  requirements.txt  setup-virtualenv.sh  setup.cfg  setup.py  tox.ini
absys/: db.sqlite3
absys/absys/: settings.py
absys/config/: urls.py  wsgi.py
absys/fixtures/: sites.json
absys/templates/: 403.html  base.html
doc/: README.SETUP
docs/: .releases.rst.swp  Makefile  conf.py  demo_server_setup.rst  deployment.rst  index.rst  installation.rst  make.bat  releases.rst  settings.rst
envs/dev/: DEFAULT_DATABASE_URL  PGPASSWORD
requirements/: ci.pip  constraints.pip  dev.pip  docs.pip  forks.pip  test-local.pip  test.pip
setup/: 000-default.conf  README.rst  django.conf  install.sh  packages.txt  pg_hba.conf  wsgi.conf
src/: befehl_testdaten_generieren  db.sqlite3  dumpdata  manage.py
src-old/absys/: urls.py  wsgi.py
src-old/base/: urls.py  views.py
src-old/home/: views.py
src-old/schueler/: urls.py  views.py
src-old/stammdaten/: admin.py  services.py  urls.py
src-old/theme/: views.py
src/absys/: settings.py  urls.py  wsgi.py
src/home/: urls.py
src/index/: admin.py  models.py  urls.py  views.py
src/schueler/: admin.py  models.py
src/stammdaten/: admin.py  demo.txt  models.py  services.py  views.py
src/theme/: urls.py
tests/: conftest.py  factories.py  test_context_processors.py
tests/abrechnung/: conftest.py  factories.py  test_managers.py  test_models.py  test_services.py
(+256 files in other folders)
