[bumpversion]
files = setup.py absys/__init__.py absys/config/__init__.py absys/templates/base.html docs/conf.py
commit = True
current_version = 1.3.0

[coverage:run]
branch = True
source = absys
omit = *migrations*,*urls.py,manage.py,absys/config/*
plugins = django_coverage_plugin

[coverage:report]
show_missing = True

[doc8]
ignore-path = *.egg-info/,.tox/,docs/_build/,node_modules,absys/apps/*/templates/*,absys/media/

[flake8]
exclude = build/*.py,docs/*.py,*/migrations/*.py,absys/config/app_template/*,absys/config/wsgi.py
ignore = E128
max-line-length = 99

[isort]
line_length = 99
not_skip = __init__.py
known_first_party = absys,tests
known_third_party = autofixture,braces,configurations,coverage,crispy_forms,dj_database_url,django,envdir,factory,factory_boy,faker,fauxfactory,freezegun,grappelli,psycopg2,pytest,pytest_factoryboy,six,extra_views
skip = manage.py,migrations,wsgi.py

[pep257]
add-ignore = D100,D104

[tool:pytest]
DJANGO_SETTINGS_MODULE = absys.config.settings.test
DJANGO_CONFIGURATION = Testing
addopts = 
	--strict
	--fail-on-template-vars
	-r a
markers = 
	slowtest: Mark the test as slow test.

[wheel]
universal = 1

[metadata]
license_file = LICENSE

